; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_relation.c_expandRelation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_relation.c_expandRelation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@AccessShareLock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32, i32, i32, i32, i32**, i32**)* @expandRelation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expandRelation(i32 %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32** %6, i32** %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32**, align 8
  %16 = alloca i32**, align 8
  %17 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %9, align 4
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32** %6, i32*** %15, align 8
  store i32** %7, i32*** %16, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @AccessShareLock, align 4
  %20 = call %struct.TYPE_5__* @relation_open(i32 %18, i32 %19)
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %17, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %12, align 4
  %32 = load i32, i32* %13, align 4
  %33 = load i32, i32* %14, align 4
  %34 = load i32**, i32*** %15, align 8
  %35 = load i32**, i32*** %16, align 8
  %36 = call i32 @expandTupleDesc(%struct.TYPE_6__* %23, i32* %24, i32 %29, i32 0, i32 %30, i32 %31, i32 %32, i32 %33, i32** %34, i32** %35)
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %38 = load i32, i32* @AccessShareLock, align 4
  %39 = call i32 @relation_close(%struct.TYPE_5__* %37, i32 %38)
  ret void
}

declare dso_local %struct.TYPE_5__* @relation_open(i32, i32) #1

declare dso_local i32 @expandTupleDesc(%struct.TYPE_6__*, i32*, i32, i32, i32, i32, i32, i32, i32**, i32**) #1

declare dso_local i32 @relation_close(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
